--- a/mediatheque/bibliotheque/templates/bibliotheque/gerer_emprunt.html
+++ b/mediatheque/bibliotheque/templates/bibliotheque/gerer_emprunt.html
@@ -6,6 +6,7 @@
     <title>Gérer les Emprunts</title>
 </head>
 <body>
+    <a href="{% url 'dashboard' %}">Retour au Dashboard</a>
     <h1>Gérer les Emprunts</h1>
 
     {% if error %}
