--- a/mediatheque/bibliotheque/templates/bibliotheque/liste_dvd.html
+++ b/mediatheque/bibliotheque/templates/bibliotheque/liste_dvd.html
@@ -30,5 +30,6 @@
 
         <button type="submit" onclick="return confirm('Voulez-vous vraiment supprimer ces DVD ?')">Supprimer la sélection</button>
     </form>
+    <a href="{% url 'dashboard' %}">Retour au Dashboard</a>
 </body>
 </html>
