--- a/mediatheque/bibliotheque/templates/bibliotheque/liste_membres.html
+++ b/mediatheque/bibliotheque/templates/bibliotheque/liste_membres.html
@@ -52,5 +52,6 @@
             Supprimer la sélection
         </button>
     </form>
+    <a href="{% url 'dashboard' %}">Retour au Dashboard</a>
 </body>
 </html>
