--- a/mediatheque/bibliotheque/templates/bibliotheque/ajouter_cd.html
+++ b/mediatheque/bibliotheque/templates/bibliotheque/ajouter_cd.html
@@ -4,6 +4,7 @@
     <title>Ajouter un CD</title>
 </head>
 <body>
+    <a href="{% url 'dashboard' %}">Retour au Dashboard</a>
     <h1>Ajouter un CD</h1>
     <form method="post">
         {% csrf_token %}
