--- a/mediatheque/bibliotheque/templates/bibliotheque/liste_jeux.html
+++ b/mediatheque/bibliotheque/templates/bibliotheque/liste_jeux.html
@@ -30,5 +30,6 @@
 
         <button type="submit" onclick="return confirm('Voulez-vous vraiment supprimer ces jeux de plateau ?')">Supprimer la sélection</button>
     </form>
+    <a href="{% url 'dashboard' %}">Retour au Dashboard</a>
 </body>
 </html>
