--- a/mediatheque/bibliotheque/templates/bibliotheque/liste_livres.html
+++ b/mediatheque/bibliotheque/templates/bibliotheque/liste_livres.html
@@ -32,5 +32,6 @@
 
         <button type="submit" onclick="return confirm('Voulez-vous vraiment supprimer ces livres ?')">Supprimer la sélection</button>
     </form>
+    <a href="{% url 'dashboard' %}">Retour au Dashboard</a>
 </body>
 </html>
