ajouty de l'espace membre

--- a/mediatheque/bibliotheque/templates/bibliotheque/index.html
+++ b/mediatheque/bibliotheque/templates/bibliotheque/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Bienvenue à la Médiathèque</h1>
     <a href="/login/">Accès Bibliothécaire</a>
-    <a href="/membres/">Accès Membre</a>
+    <a href="/espace_membre/">Accès Membre</a>
 </body>
 </html>
